--- a/.gitignore
+++ b/.gitignore
@@ -4,13 +4,11 @@
 *.cache
 *.png
 *.pt
+*.onnx
 
 
-!labels_correlogram.jpg
-!labels.jpg
-!train_batch0.jpg
-!train_batch1.jpg
-!train_batch2.jpg
+
+
 
 !val_batch0_labels.jpg
 !val_batch0_pred.jpg
